# goat-cricket-rankings

./: check_xi_changes.py  patch_roles.py  update_rankings.py
agent/: .env.example  .gitignore  README.md  pyproject.toml
agent/deploy/: modal_app.py
agent/src/analyst/: __init__.py  cli.py  config.py  graph.py  retrieval.py  state.py  tracing.py
agent/src/analyst/nodes/: __init__.py  critic.py  plan_gate.py  planner.py  retriever.py  synthesizer.py  tool_executor.py
agent/src/analyst/tools/: __init__.py  _data.py  analyze_career_arc.py  build_xi.py  compare_players.py  get_player.py  query_players.py
agent/src/api/: __init__.py  main.py
agent/tests/: conftest.py  test_graph.py  test_retrieval.py  test_tools.py
cricket_cache/: batting_aggregate.pkl  batting_positions.pkl  bowling_aggregate.pkl  era_cache.pkl  innings_cache.pkl  ipl_bat_agg.pkl  ipl_bat_cum_cache.pkl  ipl_bowl_agg.pkl  ipl_bowl_cum_cache.pkl  ipl_era_cache.pkl  ipl_global_match_stats.pkl  ipl_innings_list.pkl  ipl_match_agg.pkl  ipl_team_map.pkl  odi_bat_agg.pkl  odi_bowl_agg.pkl  odi_era_cache.pkl  odi_global_match_stats.pkl  odi_innings_list.pkl  odi_match_agg.pkl  player_names.pkl  player_roles.pkl  player_roles_api.pkl  t20i_bat_agg.pkl  t20i_bowl_agg.pkl  t20i_era_cache.pkl  t20i_global_match_stats.pkl  t20i_match_agg.pkl  test_global_match_stats.pkl  test_match_agg.pkl
docs/: analyst.js  app.js  default_xis.json  index.html  ipl_rankings.json  llm.js  odi_rankings.json  rankings.json  style.css  t20i_rankings.json
worker/: README.md  package-lock.json  package.json  wrangler.toml
(+2 files in other folders)
